--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/react": "^2.0.2",
 		"@astrojs/tailwind": "^3.0.1",
+		"@astrojs/vercel": "^3.1.3",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"astro": "^2.0.15",
