--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+.env.development.local
 
 # macOS-specific files
 .DS_Store
+
+.vercel
