--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-	"name": "afraid-ascension",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/react": "^2.0.2",
-		"@astrojs/tailwind": "^3.0.1",
-		"@astrojs/vercel": "^3.1.3",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"astro": "^2.0.15",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"tailwindcss": "^3.2.7"
-	}
+  "name": "afraid-ascension",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/react": "^2.0.2",
+    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/vercel": "^3.1.3",
+    "@prisma/client": "^4.10.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vercel/edge-config": "^0.1.1",
+    "astro": "^2.0.15",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "prisma": "^4.10.1"
+  }
 }
