--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^4.10.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "@vercel/edge-config": "^0.1.1",
     "astro": "^2.0.16",
     "react": "^18.2.0",
