--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "webhookthing": "webhookthing",
+    "prisma": "prisma studio"
   },
   "dependencies": {
     "@astrojs/react": "^2.0.2",
