--- a/package.json
+++ b/package.json
@@ -7,25 +7,31 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "webhookthing": "webhookthing",
-    "prisma": "prisma studio"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/react": "^2.0.2",
     "@astrojs/tailwind": "^3.0.1",
     "@astrojs/vercel": "^3.1.3",
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^4.11.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vercel/analytics": "^0.1.11",
     "@vercel/edge-config": "^0.1.1",
-    "astro": "^2.0.16",
+    "astro": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "prisma": "^4.10.1"
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4",
+    "prisma": "^4.11.0",
+    "typescript": "^4.9.5"
   }
 }
