--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "astro": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@astrojs/node": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.36.0",
